# serializer version: 1
# name: test_platform_setup_and_discovery[cover.bedroom_blinds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.bedroom_blinds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.thdfxdqqlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.bedroom_blinds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'bedroom blinds None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.bedroom_blinds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.blinds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.blinds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.nr26obpclccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.blinds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 36,
      'device_class': 'curtain',
      'friendly_name': 'blinds None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.blinds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.dining_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.dining_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.slkkzcxa7yjqmetqlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.dining_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'Dining 1 None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.dining_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.estore_sala-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.estore_sala',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.gtcinipmdp5rgx3nlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.estore_sala-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'curtain',
      'friendly_name': 'Estore Sala None',
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.estore_sala',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[cover.fenster_kuche-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.fenster_kuche',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.7xpq8plg06p46j7ygklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.fenster_kuche-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'Fenster Küche None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.fenster_kuche',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.garage_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.garage_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'indexed_door',
    'unique_id': 'tuya.q3iie9vjd4wfqyy1qzkmkcswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.garage_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'garage',
      'friendly_name': 'Garage door  None',
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.garage_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kit_blinds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kit_blinds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.xR2ASpOQgAAqu7Drlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kit_blinds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'curtain',
      'friendly_name': 'Kit-Blinds None',
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kit_blinds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kitchen_blinds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'blind',
    'unique_id': 'tuya.ftvxinxevpy21tbelcswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'blind',
      'friendly_name': 'Kitchen Blinds None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kitchen_blinds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kitchen_blinds_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.dke76hazlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 48,
      'device_class': 'curtain',
      'friendly_name': 'Kitchen Blinds None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kitchen_blinds_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.lounge_dark_blind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.lounge_dark_blind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.g1efxsqnp33cg8r3lccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.lounge_dark_blind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Lounge Dark Blind None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.lounge_dark_blind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.pergola-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.pergola',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.shga3pmbkwhthvqxgklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.pergola-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Pergola None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.pergola',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.persiana_do_quarto-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.persiana_do_quarto',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.ikbbdbnqsd70pc1glccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.persiana_do_quarto-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Persiana do Quarto None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.persiana_do_quarto',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.projector_screen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.projector_screen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.aiag5pku0x39rkfllccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.projector_screen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Projector Screen None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.projector_screen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.roller_shutter_living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.roller_shutter_living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.jzpap0inhkykqtlwgklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.roller_shutter_living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 75,
      'device_class': 'curtain',
      'friendly_name': 'Roller shutter Living Room None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.roller_shutter_living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.tapparelle_studio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.tapparelle_studio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.2w46jyhngklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.tapparelle_studio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'Tapparelle studio None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.tapparelle_studio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.vividstorm_screen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.vividstorm_screen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.4hbnivc4w2rsw966lccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.vividstorm_screen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'VIVIDSTORM SCREEN None',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.vividstorm_screen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
